# chima-org_jira-mcp-server

./: README.md  pyproject.toml
src/jira_service/: jira_connect.py  server.py  server2.py  utilities.py
